# big

./: .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
config/: pools.yml  risk.yml  scoring.yml
data/samples/: akshare_acceptance_daily_bars.csv  daily_bars.csv  events.jsonl  focus_pool.csv  holdings.csv  minute_bars.csv  sectors.csv
docs/: integration-acceptance-runbook.md  mvp-acceptance-checklist.md  mvp-acceptance-evidence.md  ops-runbook.md  risk-and-debt-register.md
scripts/: import_focus_pool.py  import_holdings.py  run_daily_after_close.py  run_integration_acceptance.py  run_intraday_monitor.py  seed_sample_data.py
src/trading_assistant/: integration_acceptance.py  settings.py
tests/: test_config_files.py  test_docker_compose_exists.py  test_domain_models.py  test_integration_acceptance.py  test_ops_docs_exist.py  test_settings.py
tests/agents/: test_event_news_agents.py  test_llm_client.py
tests/alerts/: test_dispatcher.py  test_feishu.py  test_rules.py
tests/backtest/: test_engine_metrics.py  test_signal_ledger.py
tests/data_sources/: test_acceptance_samples.py  test_fake_provider.py  test_provider_contracts.py  test_quality.py
tests/db/: test_repositories.py
tests/factors/: test_core_factors.py
tests/observability/: test_task_log.py
tests/planning/: test_candidate_selector.py  test_trade_plan.py
tests/pools/: test_classifier.py  test_focus_pool.py
tests/portfolio/: test_importer.py  test_risk_engine.py
tests/reporting/: test_daily_report.py
tests/scheduler/: test_jobs.py
(+73 files in other folders)
