[project]
name = "a-share-short-term-trading-assistant"
version = "0.1.0"
description = "Conservative A-share short-term trading assistant"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.14.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg2-binary>=2.9.9",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "tushare>=1.4.12",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
